<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="old_nome_app">WifiQR File Transfer</string>
    
    <string name="nome_app">IPCast</string>
    
    <string name="action_settings">Settings</string>
    <string name="clear_selection">Clear current selection</string>
    <string name="confirm_selection">Start file server</string>
    <string name="scanQR">Scan QR code</string>
    <string name="auto_download">Auto download</string>
    <string name="auto_download_summ">Automatically start downloading</string>
    <string name="srv_port">Server port</string>
    <string name="srv_port_summ">Choose which port to use when serving files</string>
    <string name="scan_or_type">Scan the code or type in a browser:</string>
    <string name="select_files">Select files to share</string>
    <string name="empty">This directory is empty.</string>
    <string name="creating_ap">WiFi was off, hotspot enabled</string>
    <string name="error_creating_ap">Error to enabling hotspot, try to start it manually from phone settings</string>
    <string name="ap_password">Password</string>
    <string name="ap_password_summ">Set Password for WiFi hotspot</string>
    <string name="no_pass">No password (unprotected)</string>
    <string name="stop_service">Stop service</string>
    <string name="disable_tether">You can disable thetering</string>
    <string name="server_running">Server is running</string>
    <string name="received_file_directory">Files Inbox directory</string>
    <string name="open_source">Open source licenses</string>
    <string name="open_source_summ">License details for open source software</string>
    <string name="build_version">Build number</string>
    <string name="version">Version:</string>
    <string name="info">About</string>
    <string name="settings">Settings</string>
    <string name="hold_to_set_folder">Tap and hold a directory to set it as Inbox</string>
    <string name="directory_setted">Set as Inbox folder:</string>
    <string name="waring_mobile_data">Please note: If mobile data is enabled, it will be shared too</string>
    <string name="enable_ap">Enable WiFi hotspot?</string>
    <string name="yes">Enable</string>
    <string name="no">Close</string>
    <string name="frame_qr">framing the QR code</string>
    <string name="send_file">Send files</string>
    <string name="no_file_selected">No files selected!</string>
    <string name="donwload_now">Download now!</string>
    <string name="user_data">Main directory</string>
    <string name="order_by">Order by</string>
    <string name="nfc_use">Hold the devices together (usually back to back) and then tap on your screen</string>
    <string name="no_permission">You don\'t have permission to set this as Inbox folder</string>
    <string name="external_directory">Go to the main directory</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="select_apps">Select apps to send</string>
    <string name="list_type">List view</string>
    <string name="grid_type">Grid view</string>
    <string name="now_playing">Now Playing</string>
    <string name="sound_beam">SoundBeam</string>
   <string name="sound_beam_sum">Sync audio playback in all devices</string>
	<string name="audio_latency">Android audio latency</string>    
	<string name="audio_latency_sum">Android devices have different latencies, try this to sync them</string>    
	<string name="beta_message"><b>Warning:</b> This is a beta version. Using this application may result in tearing a hole in time, as well as damaging objects, unfriendly people and animals. Please feel free to report bugs anyway!</string>
	<string name="beta_message_ok">I\'ll take the risk</string>
	<string name="queue">Queue</string>
	<string name="all_songs">All songs</string>
	<string name="unknown_artist">Unknown artist</string>
	<string name="songs">songs</string>
	<string name="no_permission_write">I can\'t set the inbox folder, you have no write permission</string>
	
	<string name="play_now">PLAY</string>
	<string name="add_queue">QUEUE</string>
	
	<string name="guide_title">Help</string>
	<string name="generic_guide">I\'m helping you</string>
	
	<string name="guide_link">http://jbench.altervista.org/help/help-en.html</string>
	<string name="no_connection">No connection to show the online help</string>
	<string name="protected_app">Unable to send: Protected app</string>
	<string name="only_mp3">Unable to play: Supported only mp3 file</string>
	
	
	
	<string name="sound_beam_not_supported">Soundbeam is not supported by this browser, try using one of following:</string>
	<string name="slide_slow">Slide slowly untile you don\'t ear an echoless sound</string>
	<string name="should_start_music_video">Before do this you need start a music/video</string>
	<string name="changelog_message">
This app was <b>renamed</b> from WifiQr to <b>IPCast</b> and now includes many great new features such as:\n\n
&#8226; Send <b>apps</b> to others\n
&#8226; Display <b>photos</b> in a remote device (tap and hold)\n\r
&#8226; Stream <b>music and video</b> over devices (tap and hold)\n\r
&#8226; <b>SoundBeam: Sync audio playback between multiple devices</b> (currently supported in Chrome, Firefox and Opera browers)\n
&#8226; Create <b>playlists containing both audio and video</b> files\n\n
This update also brings a <b>brand new look</b> and fixes multiple issues.
	</string>
	<string name="changelog_title">News: new name, new features</string>
	<string name="changelog_Ok_button">OK, do not show again</string>
	
	<string-array name="drawer_menu">
        <item>File Explorer</item>
        <item>Apps</item>
        <item>"Images &amp; Videos"</item>
        <item>Music</item>
    </string-array>
    <string-array name="order_names_files">
        <item>Name - Ascending</item>
        <item>Name - Descending</item>
        <item>Size - Ascending</item>
        <item>Size - Descending</item>
    </string-array>
    <string-array name="order_names_photo">
        <item>Most recent</item>
        <item>Media Type</item>
        <item>Size - Ascending</item>
        <item>Size - Descending</item>
    </string-array>
    <string-array name="music_view">
        <item>Artists</item>
        <item>Albums</item>
        <item>Songs</item>
        <item>Genres</item>
    </string-array>

    <string name="nanohttpd_license">"--NanoHTTPD.java Library
        

Copyright (c) 2012-2013 by Paul S. Hawke, 2001,2005-2013 by Jarno Elonen, 2010 by Konstantinos Togias All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

* Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.

* Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.

* Neither the name of the NanoHttpd organization nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


--ZXing library


Copyright 2010 ZXing authors All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.


--Java-WebSocket library


Copyright (c) 2010-2012 Nathan Rajlich

Permission is hereby granted, free of charge, to any person
obtaining a copy of this software and associated documentation
files (the "Software"), to deal in the Software without
restriction, including without limitation the rights to use,
copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the
Software is furnished to do so, subject to the following
conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
OTHER DEALINGS IN THE SOFTWARE.


--DynamicListView


Copyright (C) 2013 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

--Video.js

Copyright 2013 Brightcove, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"</string>

</resources>