<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wifiqr="http://schemas.android.com/apk/res-auto" >


        <item
        android:id="@+id/view_type"
        
        wifiqr:showAsAction="ifRoom"
        android:title="@string/order_by"
        android:orderInCategory="80"/>
    
    
        <item
        android:id="@+id/order_by"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/order_by"/>

    <item
        android:id="@+id/confirm_selection"
        android:icon="@drawable/confirm_selection"
        android:title="@string/confirm_selection"
        android:visible="false"
        wifiqr:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/external_directory"
        android:icon="@drawable/ic_action_external_directory"
        android:title="@string/external_directory"
        wifiqr:showAsAction="ifRoom">
    </item>
    

</menu>